overflow fix

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -39,6 +39,9 @@ a img:hover,
 a img:focus {
     cursor: zoom-in
 }
+.overflowHid{
+  overflow: hidden;
+}
 blockquote {
     color: #808080;
     font-style: italic;
